# crypto-rust

./: .gitignore  Cargo.toml  README.md
crypto-build/: .gitignore  Cargo.toml  Cross.toml  README.md  build.gradle  build.rs  corssrc.bash_aliases  gradlew  settings.gradle
crypto-build/crypto-spring-build/: README.md  build.gradle  settings.gradle
crypto-build/crypto-spring-build-jdk8/: .gitignore  build.gradle  settings.gradle
crypto-build/crypto-spring-build-jdk8/crypto/: config.json
crypto-build/crypto-spring-build-jdk8/src/main/java/com/freelife/: Application.java
crypto-build/crypto-spring-build-jdk8/src/main/resources/: application.yml
crypto-build/crypto-spring-build-jdk8/src/test/java/com/freelife/: UtilTest.java
crypto-build/crypto-spring-build/src/main/resources/: application.yml
crypto-build/crypto-spring-build/src/test/java/com/freelife/: ApplicationTests.java  UtilTest.java
crypto-build/docker/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.x86_64-pc-windows-gnu  Dockerfile.x86_64-unknown-linux-gnu
crypto-build/docs/: Cargo.toml  Code-Artifact.md  Cross-Compile-Command.md  Cross.toml  Linux-Install.md  Window-Build.md
crypto-build/gradle/: libs.versions.toml
crypto-build/lib/: .gitignore  build.gradle
crypto-build/lib/backup/: build.gradle.bak  build.gradle.build  build.gradle.nobuild  build.gradle.test
crypto-build/lib/copy/: .gitignore
crypto-build/lib/copy/old/v1/: CryptoSession.java
crypto-build/lib/copy/original/: CryptoSession.java
crypto-build/lib/copy/other/: CryptoSession.java
crypto-build/lib/copy/version8/: CryptoSession.java
crypto-build/lib/copy/version_1_8/: CryptoSession.java
crypto-build/lib/src/: .gitignore
crypto-build/src/: java_glue.rs  java_glue.rs.in  java_glue.rs.in.bak  jni_c_header.rs  jni_typemaps.rs  lib.rs
crypto-lib/: Cargo.toml
crypto-lib/src/: lib.rs
crypto-lib/src/domain/: crypto_cipher_spec.rs  crypto_config.rs  crypto_model_test.rs  mod.rs
crypto-lib/src/error/: crypto_error.rs  crypto_error_test.rs  mod.rs  test_error.rs  thiserror_test.rs
crypto-lib/src/kms/: aws_kms_service.rs  aws_kms_service_test.rs  mod.rs
crypto-lib/src/session/: crypto_local_generator.rs  crypto_session.rs  mod.rs
crypto-lib/src/util/: crypto_util.rs  crypto_utils_test.rs  mod.rs
flapigen/: Cargo.toml
(+51 files in other folders)
