[package]
documentation = "https://github.com/cross-rs/wiki_assets"
license = "MIT OR Apache-2.0"
name = "config"
repository = "https://github.com/cross-rs/wiki_assets"
version = "0.0.0-dev.0"
edition = "2021"
publish = false

# Cargo.toml은 `Cross.toml`과 동일하지만
# 저장소에 자동으로 포함되고
# 모든 키에 `package.metadata.cross` 접두사를 붙입니다.
# 더 자세한 설명서는 `Cross.toml`을 참조하세요.
[package.metadata.cross.build]
xargo = true

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
xargo = false
build-std = false
image = "test-image"
pre-build = ["apt-get update"]
runner = "custom-runner"